deploy/kubernetes/apis4notifications-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apis4notificationsingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  namespace: apis4notifications      
spec:
  rules:
  - host:
    http:
      paths:
      - path: /apis4notifications
        backend:
          serviceName: apis4notificationsservice
          servicePort: http
